--- a/netdevops-ansible/cisco/group_vars/ios.yml
+++ b/netdevops-ansible/cisco/group_vars/ios.yml
@@ -1,9 +1,9 @@
----
 ansible_connection: ansible.netcommon.network_cli
 ansible_network_os: cisco.ios.ios
 ansible_become: yes
 ansible_become_method: enable
-ansible_become_password: ccnacisco
+ansible_become_password: your_enable_password
 ansible_user: your_username
 ansible_password: your_password
 ansible_ssh_common_args: '-o HostKeyAlgorithms=+ssh-rsa -o KexAlgorithms=+diffie-hellman-group1-sha1'
+ansible_host_key_checking: false
