--- a/netdevops-ansible/cisco/ansible.cfg
+++ b/netdevops-ansible/cisco/ansible.cfg
@@ -1,5 +1,5 @@
 [defaults]
 inventory = hosts
 host_key_checking = False
-roles_path = ./roles
+roles_path = ./role
 collections_paths = ./collection
